<resources>
    <string name="app_name">TD1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_2">Activity2</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_info">Please enter your personal information below</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="age">Age</string>
    <string name="skills">Skills</string>
    <string name="phone">Phone Number</string>
    <string name="yourProfile">Your profile:</string>
    <string name="profileName">Name</string>
    <string name="profileFirstName">FirstName</string>

    <string name="bonjour_monde">Salut le monde!</string>
    <string name="entrer_infos">Entrer vos informations personnelles</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="competences">Compétences</string>
    <string name="telephone">Téléphone</string>
    <string name="valider">Valider</string>


</resources>
