<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/menuLayout1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_info"
        android:id="@+id/enter_info"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/lastName"
        android:ems="10"
        android:id="@+id/lastName"
        android:layout_marginTop="59dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstName"
        android:text="@string/firstName"
        android:layout_below="@+id/lastName"
        android:layout_alignLeft="@+id/lastName"
        android:layout_alignStart="@+id/lastName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/age"
        android:text="@string/age"
        android:layout_below="@+id/firstName"
        android:layout_alignLeft="@+id/lastName"
        android:layout_alignStart="@+id/lastName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skills"
        android:text="@string/skills"
        android:layout_below="@+id/age"
        android:layout_alignLeft="@+id/age"
        android:layout_alignStart="@+id/age" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone"
        android:text="@string/phone"
        android:layout_below="@+id/skills"
        android:layout_alignLeft="@+id/lastName"
        android:layout_alignStart="@+id/lastName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Valider"
        android:id="@+id/validate"
        android:onClick="sendInfos"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



</LinearLayout>
